--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data=pd.read_csv(r'C:\\DS\\fsdsmendtoend\\notebooks\\data\\gemstone.csv')"
+    "data=pd.read_csv(r'C:\\Users\\shelk\\OneDrive\\Desktop\\DiamondPricePrediction\\notebooks\\data\\gemstone.csv')"
    ]
   },
   {
