--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd \n",
     "import seaborn as sns\n",
-    "data=pd.read_csv(\"./data/gemstone.csv\")\n"
+    "data=pd.read_csv(\"C:\\Users\\shelk\\OneDrive\\Desktop\\DiamondPricePrediction\\notebooks\\data\\gemstone.csv\")"
    ]
   },
   {
